Reformat & clean up